--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>hello</title>
   </head>
   <body>
-    <h1>hello student!! nice to meet you!</h1>
+    <h1>hello student! I am thrilled about this course!</h1>
   </body>
 </html>
